﻿S2Dao.NET 0.4.5

- SQLファイルの文字コードをSqlFileEncodingプロパティで指定できるようにする。

S2Dao.NET 0.4.4
2006/7/4

- テーブル定義が取得できない場合に例外が発生する問題を修正する
- RELNOで自己参照を指定すると無限ループが発生する問題を修正する
- バインド変数に対応する引数が見つからない場合にNullReferenceExceptionが発生する問題を修正する

S2Dao.NET 0.4.3
2006/6/17

- 引数がDTOの場合の自動SQL生成機能が動かない問題を修正する
- 自動WHERE句作成でNHibernateのNullablesとSystem.Data.SqlTypesに対応する
- DaoMetaDataImplのprotectedメソッドにvirtualキーワードを付ける

S2Dao.NET 0.4.2
2006/5/30

- IFコメントの条件式でDTOが利用できない問題を修正する
- 自動SELECTコマンド生成機能で、メソッドのシグネチャから自動的にWHERE句以降を生成する機能が動作しない不具合を修正する